# NightOwl-SRE-Platform

./: .gitignore  README.md  docker-compose.yml  example.py  mock_log.txt  nightowl-redesign.html  pyproject.toml  test_nvidia.py  tox.ini
.github/workflows/: ai-autofix.yml  ci.yml  docker-build.yml  pr-tests.yml
docs/: 30_days_plan.html  architecture_cv_reference.html  day12_13_mcp_explanation.html  mcp_architecture.md
docs/diagrams/: Architecture.html  Documentation.html  architecture-animated.html
scripts/: autofix.py
services/agent-gateway/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  config.py  database.py  ingest_runbooks.py  kafka_consumer.py  main.py  mcp_client.py  models.py  models_db.py  requirements.txt  test_correlator.py  test_e2e_pipeline.py  test_fixer.py  test_fixer_mcp.py  test_log_analyst.py  test_rag.py  test_triage_rag.py  test_workflow.py  utils_slack.py  vector_db.py
services/agent-gateway/agents/: __init__.py  compliance.py  correlator.py  fixer.py  log_analyst.py  safety_rules.py  tools.py  triage.py  utils.py  workflow_pipeline.py
services/agent-gateway/alembic/: env.py
services/agent-gateway/alembic/versions/: 318a45af8a49_initial_postgresql_db_setup.py
services/agent-gateway/mcp_servers/: Dockerfile  github_server.py  kubernetes_server.py
services/dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  stitch_output.html
services/dashboard/src/: App.css  App.jsx  index.css  main.jsx
services/event-dispatcher/: Dockerfile  index.js  kafka.js  package-lock.json  package.json
(+14 files in other folders)
